--- a/Frontend/createPet.html
+++ b/Frontend/createPet.html
@@ -73,7 +73,7 @@
                         </div>
                         <div class="card-footer">
                             <div>
-                                <button type="submit" form="frmPet" class="btn btn-success">Agregar</button>
+                                <button id="btnAdd" type="submit" form="frmPet" class="btn btn-success">Agregar</button>
                                 <a href="index.html" class="btn btn-info">Volver</a>
                             </div>
                         </div>
